--- a/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
+++ b/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
@@ -4,39 +4,197 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
     <style>
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
       }
+      main {
+        flex-direction: column;
+        align-items: center;
 
-      
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        height: 100vh;
+      }
+      .logoComNome {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+      .logoComNome .boneco {
+        width: 165px;
+        height: 115px;
+      }
+      .logoComNome .nomeLogo {
+        width: 190px;
+        height: 55px;
+      }
+
+      main h1 {
+        color: #000;
+        text-align: center;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+        font-size: 27px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: 5.67px;
+      }
+
+      .escolha {
+        display: flex;
+        gap: 36px;
+        justify-content: center;
+        width: 50px;
+        height: 250px;
+      }
+      .opcao {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 20px;
+        font-weight: 500;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+      }
+      .opcao button {
+        color: #2c2c2c;
+        text-align: center;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+        font-size: 16px;
+        font-weight: 900;
+        letter-spacing: -0.22px;
+        width: 146px;
+        height: 32px;
+        flex-shrink: 0;
+        border: none;
+        border-radius: 15px;
+        background: #07da65;
+      }
+      .opcao button:focus {
+        outline: none;
+      }
+      .opcao button:hover {
+        box-shadow: 0 0 0 0.2rem rgba(7, 218, 101, 0.25);
+        background: #07da65;
+        transition: 0.3s;
+      }
+
+      .loginpage {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        color: #000;
+        text-align: center;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 20px;
+        letter-spacing: -0.22px;
+      }
+      .loginpage p {
+        margin-bottom: 0;
+      }
+      .loginpage a {
+        color: #03af50;
+        text-decoration: none;
+        font-weight: 700;
+      }
+
+      .footerImg {
+        width: 247px;
+        height: 65px;
+        flex-shrink: 0;
+        margin-top: 20px;
+      }
+
+      @media screen and (max-width: 1024px) {
+        main {
+          flex-direction: column;
+          align-items: center;
+        }
+        .logoComNome {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+        .logoComNome .boneco {
+          width: 165px;
+          height: 115px;
+        }
+        .logoComNome .nomeLogo {
+          width: 190px;
+          height: 55px;
+        }
+      }
     </style>
   </head>
   <body>
-    
+    <main>
+      <section class="logoComNome">
+        <img
+          class="boneco"
+          src="https://i.ibb.co/g9rGQxK/boneco.png"
+          alt="boneco"
+          border="0"
+        />
+        <h1>Bem-vindo ao</h1>
+        <img
+          class="nomeLogo"
+          src="https://i.ibb.co/3sbYMLW/nomeLogo.png"
+          alt="nomeLogo"
+          border="0"
+        />
+      </section>
 
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
+      <section class="escolha">
+        <div class="opcao">
+          <img
+            src="https://i.ibb.co/bPXPKKh/esportista.png"
+            alt="esportista"
+            border="0"
+          />
+          <button type="button">AVANÇAR</button>
+          <p>Seja apoiado como atleta</p>
+        </div>
+        <div class="opcao">
+          <img
+            src="https://i.ibb.co/f2Tq8dX/doador.png"
+            alt="doador"
+            border="0"
+          />
+          <button type="button">AVANÇAR</button>
+          <p>Doador / Organizações</p>
+        </div>
+      </section>
+
+      <section class="loginpage">
+        <p>Já possui uma conta?</p>
+        <a href="#">Faça Login!</a>
+      </section>
+
+      <div class="footerImg">
+        <img
+          src="https://i.ibb.co/b6fHBsg/esporte.png"
+          alt="esporte"
+          border="0"
+        />
+      </div>
+    </main>
   </body>
 </html>
