login page update

--- a/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
+++ b/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
@@ -47,7 +47,7 @@
 
       <section class="loginpage">
         <p>Já possui uma conta?</p>
-        <a href="#">Faça Login!</a>
+        <a href="../01 - login/index.html">Faça Login!</a>
       </section>
 
       <div class="footerImg">
