--- a/Athlete_Connect/02 - chat/index.html
+++ b/Athlete_Connect/02 - chat/index.html
@@ -3,9 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Chat</title>
 </head>
 <body>
   
+
+  <label for="">Mensagem</label>
+  <input type="text" id="msgTxt">
+<br>
+<br>
+  <label for="">Imagem</label>
+<input type="file" id="msgImg">
+<br>
+<br>
+<button onclick="chatOperation()">
+  Enviar
+</button>
+
+<br>
+<br>
+
+<div id="msgAppear">
+
+</div>
+
+
+<img src="" id="imgAppear" alt="" >
+
+  <script src="chat.js">
+  </script>
 </body>
 </html>
