fix, build and refactor: todas as páginas de cadastro/login

--- a/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
+++ b/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
@@ -31,7 +31,7 @@
             alt="esportista"
             border="0"
           />
-          <button type="button">AVANÇAR</button>
+          <button type="button" onclick="window.location.href='../01 - login/loginAtleta.html'">AVANÇAR</button>
           <p>Seja apoiado como atleta</p>
         </div>
         <div class="opcao">
@@ -40,7 +40,7 @@
             alt="doador"
             border="0"
           />
-          <button type="button">AVANÇAR</button>
+          <button type="button" onclick="window.location.href='../01 - login/loginCarreira.html'">AVANÇAR</button>
           <p>Doador / Organizações</p>
         </div>
       </section>
