--- a/Athlete_Connect/00 - cadastro_login/01 - login/loginInvestidor2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/loginInvestidor2.html
@@ -27,24 +27,14 @@
 
       <section class="loginpage">
         <p>Já possui Conta?
-        <a href="#">Faça Login!</a></p>
+        <a href="./index.html">Faça Login!</a></p>
       </section>
-
-      <div class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <h4>Redefinir senha</h4>
-          <p>informe o CPF/CNPJ para qual deseja redefinir sua senha</p>
-          <input type="text" placeholder="CPF/CNPJ" />
-          <button class="botaoPrincipal" type="button">CONFIRMAR</button>
-        </div>
-      </div>
 
       <div class="submitbutton">
         <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
       </div>
     </main>
 
-    <script src="./assets/script.js"></script>
+    <script src="./assets/returnToLogin.js"></script>
   </body>
 </html>
