--- a/Athlete_Connect/00 - cadastro_login/01 - login/loginOrg.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/loginOrg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login_Organizacao</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <main>
@@ -22,32 +22,40 @@
       <section class="forms">
         <input type="text" placeholder="CPF/CNPJ" />
         <input type="email" placeholder="Email" />
-        <input  type="text" placeholder="Nome do Perfil" />
+        <input type="text" placeholder="Nome do Perfil" />
         <input type="password" placeholder="Senha" />
-
       </section>
-   
 
       <section class="loginpage">
-        <p>Já possui Conta?
-        <a href="#">Faça Login!</a></p>
+        <p>Já possui Conta? <a href="./index.html">Faça Login!</a></p>
       </section>
-
-      <div class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <h4>Redefinir senha</h4>
-          <p>informe o CPF/CNPJ para qual deseja redefinir sua senha</p>
-          <input type="text" placeholder="CPF/CNPJ" />
-          <button class="botaoPrincipal" type="button">CONFIRMAR</button>
-        </div>
-      </div>
 
       <div class="submitbutton">
         <button class="botaoPrincipal" type="button">AVANÇAR</button>
       </div>
     </main>
 
-    <script src="./assets/script.js"></script>
+    <script>
+      let btnNext = document.querySelector(".submitbutton button");
+      let inputs = document.querySelectorAll(".forms input");
+
+      btnNext.onclick = function () {
+        let qtd = 0;
+        inputs.forEach((input) => {
+          qtd++;
+        });
+        inputs.forEach((input) => {
+          if (input.value === "") {
+            alert("Preencha todos os campos");
+          } else {
+            qtd--;
+          }
+        });
+        
+        if (qtd === 0) {
+          window.location.href = "./loginOrg2.html";
+        }
+      };
+    </script>
   </body>
 </html>
