--- a/Athlete_Connect/00 - cadastro_login/01 - login/loginOrg2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/loginOrg2.html
@@ -23,21 +23,12 @@
         <input  type="text" placeholder="Ramo" />
 
       </section>
-      <div class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <h4>Redefinir senha</h4>
-          <p>informe o CPF/CNPJ para qual deseja redefinir sua senha</p>
-          <input type="text" placeholder="CPF/CNPJ" />
-          <button class="botaoPrincipal" type="button">CONFIRMAR</button>
-        </div>
-      </div>
-
+  
       <div class="submitbutton">
         <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
       </div>
     </main>
 
-    <script src="./assets/script.js"></script>
+    <script src="./assets/returnToLogin.js"></script>
   </body>
 </html>
