build: estrutura das pags principais

--- a/Athlete_Connect/00 - cadastro_login/01 - login/loginAtleta.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/loginAtleta.html
@@ -9,6 +9,9 @@
       .botaoPrincipal {
         margin-top: 0;
       }
+      .titleGreen {
+        color: #03af50;
+      }
     </style>
   </head>
   <body>
@@ -21,7 +24,7 @@
           border="0"
         />
         <h1>Bem vindo,</h1>
-        <h1 id="h2">Atleta</h1>
+        <h1 class="titleGreen">Atleta</h1>
       </section>
 
       <section class="forms">
