--- a/Athlete_Connect/00 - cadastro_login/01 - login/loginInvestidor.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/loginInvestidor.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login_Investidor</title>
     <link rel="stylesheet" href="./assets/style.css" />
+    <style>
+      .botaoPrincipal {
+        margin-top: 0;
+      }
+      .titleGreen {
+        color: #03af50;
+      }
+    </style>
   </head>
   <body>
     <main>
@@ -16,7 +24,7 @@
           border="0"
         />
         <h1>Bem vindo,</h1>
-        <h1 id="h2">Investidor</h1>
+        <h1 class="titleGreen">Investidor</h1>
       </section>
 
       <section class="forms">
