--- a/Athlete_Connect/01 - telas principais/00 - favoritos/index.html
+++ b/Athlete_Connect/01 - telas principais/00 - favoritos/index.html
@@ -1,14 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Favoritos</title>
-  <link rel="stylesheet" href="../assets/style.css">
-</head>
-<body>
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Favoritos</title>
+    <link rel="stylesheet" href="../assets/style.css" />
+  </head>
+  <body>
+    <main>
+      <header class="header">
+        <div class="logo">
+          <img
+            class="boneco"
+            src="https://i.ibb.co/g9rGQxK/boneco.png"
+            alt="boneco"
+            border="0"
+          />
+          <span>Athlete Connect</span>
+        </div>
+        <div class="tabs">
+          <a href="./index.html" class="tab active">Para você</a>
+          <a href="#" class="tab">Favoritos</a>
+        </div>
+      </header>
 
-  <script src="../assets/index.js"></script>
-</body>
+      <!-- área de teste para saber se o header e a botton-nav estão flutando e fixos na tela -->
+      <section class="maincontent">
+        <img
+          src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+          alt=""
+        />
+        <img
+          src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+          alt=""
+        />
+        <img
+          src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+          alt=""
+        />
+        <img
+          src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+          alt=""
+        />
+      </section>
+      <!-- ----------- -->
+      
+      <div class="bottom-nav">
+        <a href="#" class="nav-item">
+          <img
+            src="https://i.ibb.co/4pT63Cm/home-Verde.png"
+            alt="homeVerde"
+            border="0"
+          />
+        </a>
+        <a href="#" class="nav-item">
+          <img
+            src="https://i.ibb.co/3k6pWKF/search.png"
+            alt="search"
+            border="0"
+          />
+        </a>
+        <a href="#" class="nav-item">
+          <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
+        </a>
+        <a href="#" class="nav-item">
+          <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
+        </a>
+      </div>
+    </main>
+    <script src="../assets/index.js"></script>
+  </body>
 </html>
