build: homepage post block, postButton

--- a/Athlete_Connect/01 - telas principais/00 - favoritos/index.html
+++ b/Athlete_Connect/01 - telas principais/00 - favoritos/index.html
@@ -19,33 +19,166 @@
           <span>Athlete Connect</span>
         </div>
         <div class="tabs">
-          <a href="./index.html" class="tab active">Para você</a>
-          <a href="#" class="tab">Favoritos</a>
+          <a href="./index.html" class="tab">Para você</a>
+          <a href="#" class="tab active">Favoritos</a>
         </div>
       </header>
 
-      <!-- área de teste para saber se o header e a botton-nav estão flutando e fixos na tela -->
       <section class="maincontent">
-        <img
-          src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
-          alt=""
-        />
-        <img
-          src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
-          alt=""
-        />
-        <img
-          src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
-          alt=""
-        />
-        <img
-          src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
-          alt=""
-        />
+        <article class="postagem">
+          <!-- Bloco de postagem -->
+          <div class="profilePhoto">
+            <!-- Foto de perfil -->
+            <img
+              src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+              alt=""
+            />
+          </div>
+          <div class="postagemcontent">
+            <!-- Bloco de conteúdo da postagem -->
+            <h4 class="nomePerfil">Marco A. Câmara</h4>
+            <p>A criatura ainda vai acabar com o mundo!</p>
+            <img
+              src="https://p2.trrsf.com/image/fget/cf/1200/900/middle/images.terra.com/2023/04/18/chaosgpt-qdsre1adgxuu.jpg"
+              alt=""
+            />
+            <div class="iconsPostagem">
+              <!-- botao de like -->
+              <input type="checkbox" id="checkbox" />
+              <label for="checkbox">
+                <svg
+                  id="heart-svg"
+                  viewBox="467 392 58 57"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g
+                    id="Group"
+                    fill="none"
+                    fill-rule="evenodd"
+                    transform="translate(467 392)"
+                  >
+                    <path
+                      d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
+                      id="heart"
+                      fill="none"
+                      stroke="#505050"
+                      stroke-width="3"
+                    />
+                    <circle
+                      id="main-circ"
+                      fill="#FF0000"
+                      opacity="0"
+                      cx="29.5"
+                      cy="29.5"
+                      r="1.5"
+                    />
+
+                    <g id="grp7" opacity="0" transform="translate(7 6)">
+                      <circle id="oval1" fill="#9CD8C3" cx="2" cy="6" r="2" />
+                      <circle id="oval2" fill="#8CE8C3" cx="5" cy="2" r="2" />
+                    </g>
+
+                    <g id="grp6" opacity="0" transform="translate(0 28)">
+                      <circle id="oval1" fill="#CC8EF5" cx="2" cy="7" r="2" />
+                      <circle id="oval2" fill="#91D2FA" cx="3" cy="2" r="2" />
+                    </g>
+
+                    <g id="grp3" opacity="0" transform="translate(52 28)">
+                      <circle id="oval2" fill="#9CD8C3" cx="2" cy="7" r="2" />
+                      <circle id="oval1" fill="#8CE8C3" cx="4" cy="2" r="2" />
+                    </g>
+
+                    <g id="grp2" opacity="0" transform="translate(44 6)">
+                      <circle id="oval2" fill="#CC8EF5" cx="5" cy="6" r="2" />
+                      <circle id="oval1" fill="#CC8EF5" cx="2" cy="2" r="2" />
+                    </g>
+
+                    <g id="grp5" opacity="0" transform="translate(14 50)">
+                      <circle id="oval1" fill="#91D2FA" cx="6" cy="5" r="2" />
+                      <circle id="oval2" fill="#91D2FA" cx="2" cy="2" r="2" />
+                    </g>
+
+                    <g id="grp4" opacity="0" transform="translate(35 50)">
+                      <circle id="oval1" fill="#F48EA7" cx="6" cy="5" r="2" />
+                      <circle id="oval2" fill="#F48EA7" cx="2" cy="2" r="2" />
+                    </g>
+
+                    <g id="grp1" opacity="0" transform="translate(24)">
+                      <circle id="oval1" fill="#9FC7FA" cx="2.5" cy="3" r="2" />
+                      <circle id="oval2" fill="#9FC7FA" cx="7.5" cy="2" r="2" />
+                    </g>
+                  </g>
+                </svg>
+              </label>
+              <!-- ---- -->
+              <!-- comment img -->
+              <img
+                src="../assets/images/commentButton.svg"
+                alt="iconamoon-comment"
+                border="0"
+              />
+            </div>
+            <div class="estatisticasPostagem">
+              <div class="pessoas">
+                <img
+                  src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+                  alt=""
+                />
+                <img
+                  src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+                  alt=""
+                />
+                <img
+                  src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+                  alt=""
+                />
+              </div>
+              <p>13K <br />coments</p>
+              <p>1K <br />curtidas</p>
+            </div>
+          </div>
+          <div class="configPostagem">
+            <img
+              src="https://i.ibb.co/c3hZ8b4/grommet-icons-more.png"
+              alt="grommet-icons-more"
+              border="0"
+            />
+          </div>
+        </article>
       </section>
-      <!-- ----------- -->
-      
+      <!-- modal de criação de postagem -->
+      <div class="modal">
+        <div class="modal-content">
+          <span class="close">Cancelar</span>
+          <div class="postText">
+            <div class="profilePhoto">
+              <!-- Foto de perfil -->
+              <img
+                src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+                alt=""
+              />
+            </div>
+            <textarea
+              name="postagem"
+              id="textPost"
+              placeholder="O que está acontecendo?"
+            ></textarea>
+          </div>
+
+          <button class="botaoPrincipal" type="button">Postar</button>
+        </div>
+      </div>
+      <!-- navbar inferior -->
       <div class="bottom-nav">
+        <!-- criação de postagem -->
+
+        <button class="postButton">
+          <img
+            src="../assets/images/criarPost.svg"
+            alt="homeVerde"
+            border="0"
+          />
+        </button>
         <a href="#" class="nav-item">
           <img
             src="https://i.ibb.co/4pT63Cm/home-Verde.png"
@@ -68,6 +201,7 @@
         </a>
       </div>
     </main>
+
     <script src="../assets/index.js"></script>
   </body>
 </html>
