--- a/Athlete_Connect/04 - perfil/index.html
+++ b/Athlete_Connect/04 - perfil/index.html
@@ -1,11 +1,225 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Perfil(Atleta)</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!--Aqui eu coloquei a foto de perfil, seguidores, bio e enquanto eu escrevo isso, está faltando adicionar o banner-->
+    <header class="header-perfil">
+      <section class="informacao-perfil">
+        <img
+          src="https://media.istockphoto.com/id/636887598/pt/foto/atleta-de-corrida.jpg?s=612x612&w=0&k=20&c=zevfrnWApWDvcYRinqLh7iB1GhdvwyuWtICeMHWmOWQ="
+          alt="Foto perfil"
+          class="foto-perfil"
+        />
+
+        <div class="estatisticas-container">
+          <div class="estatisticas">
+            <p><strong>32mil</strong><br />Seguidores</p>
+          </div>
+          <div class="estatisticas">
+            <p><strong>2</strong><br />Seguindo</p>
+          </div>
+        </div>
+      </section>
+      <div class="perfil-detalhes">
+        <h1>Gabriel Rios</h1>
+        <p class="biografia">Instagram/GabrielRios</p>
+      </div>
+    </header>
+
+    <!--informações e açoes do perfil-->
+    <main class="main">
+      <section class="botoes">
+        <button class="botao-seguir">Seguir</button>
+        <button class="botao-mensagem">Mensagem</button>
+        <button class="botao-compartilhar">Compartilhar</button>
+      </section>
+      <hr />
+
+      <!-- Grade para posts do usuario, aqui ainda pode melhorar, se alguem puder ajudar-->
+      <section class="feed" aria-label="Postagens do usuário">
+        <!-- Postagem 1 -->
+        <article class="postagem">
+          <header class="postagem-cabecalho">
+            <img
+              src="https://media.istockphoto.com/id/636887598/pt/foto/atleta-de-corrida.jpg?s=612x612&w=0&k=20&c=zevfrnWApWDvcYRinqLh7iB1GhdvwyuWtICeMHWmOWQ="
+              alt="Foto do usuário"
+              class="foto-usuario"
+            />
+            <div class="info-usuario">
+              <h2 class="nome-usuario">Gabriel Rios</h2>
+            </div>
+          </header>
+          <p class="texto-postagem">Texto da postagem</p>
+          <img
+            src="https://media.istockphoto.com/id/1322158059/pt/foto/dumbbell-water-bottle-towel-on-the-bench-in-the-gym.jpg?s=612x612&w=0&k=20&c=eFfg0ECbiSopufODZ0Kz6yKTXvay0pXQpwJaUXxpBoc="
+            alt=""
+            class="imagem-postagem"
+          />
+          
+        </article>
+        <!-- botao de like -->
+        <input type="checkbox" id="checkbox" />
+        <label for="checkbox">
+          <svg
+            id="heart-svg"
+            viewBox="467 392 58 57"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g
+              id="Group"
+              fill="none"
+              fill-rule="evenodd"
+              transform="translate(467 392)"
+            >
+              <path
+                d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
+                id="heart"
+                fill="none"
+                stroke="#505050"
+                stroke-width="3"
+              />
+              <circle
+                id="main-circ"
+                fill="#FF0000"
+                opacity="0"
+                cx="29.5"
+                cy="29.5"
+                r="1.5"
+              />
+
+              <g id="grp7" opacity="0" transform="translate(7 6)">
+                <circle id="oval1" fill="#9CD8C3" cx="2" cy="6" r="2" />
+                <circle id="oval2" fill="#8CE8C3" cx="5" cy="2" r="2" />
+              </g>
+
+              <g id="grp6" opacity="0" transform="translate(0 28)">
+                <circle id="oval1" fill="#CC8EF5" cx="2" cy="7" r="2" />
+                <circle id="oval2" fill="#91D2FA" cx="3" cy="2" r="2" />
+              </g>
+
+              <g id="grp3" opacity="0" transform="translate(52 28)">
+                <circle id="oval2" fill="#9CD8C3" cx="2" cy="7" r="2" />
+                <circle id="oval1" fill="#8CE8C3" cx="4" cy="2" r="2" />
+              </g>
+
+              <g id="grp2" opacity="0" transform="translate(44 6)">
+                <circle id="oval2" fill="#CC8EF5" cx="5" cy="6" r="2" />
+                <circle id="oval1" fill="#CC8EF5" cx="2" cy="2" r="2" />
+              </g>
+
+              <g id="grp5" opacity="0" transform="translate(14 50)">
+                <circle id="oval1" fill="#91D2FA" cx="6" cy="5" r="2" />
+                <circle id="oval2" fill="#91D2FA" cx="2" cy="2" r="2" />
+              </g>
+
+              <g id="grp4" opacity="0" transform="translate(35 50)">
+                <circle id="oval1" fill="#F48EA7" cx="6" cy="5" r="2" />
+                <circle id="oval2" fill="#F48EA7" cx="2" cy="2" r="2" />
+              </g>
+
+              <g id="grp1" opacity="0" transform="translate(24)">
+                <circle id="oval1" fill="#9FC7FA" cx="2.5" cy="3" r="2" />
+                <circle id="oval2" fill="#9FC7FA" cx="7.5" cy="2" r="2" />
+              </g>
+            </g>
+          </svg>
+        </label>
+        <!-- ---- -->
+         <hr>
+        <!-- Postagem 2 -->
+        <article class="postagem">
+          <header class="postagem-cabecalho">
+            <img
+              src="https://media.istockphoto.com/id/636887598/pt/foto/atleta-de-corrida.jpg?s=612x612&w=0&k=20&c=zevfrnWApWDvcYRinqLh7iB1GhdvwyuWtICeMHWmOWQ="
+              alt=""
+              class="foto-usuario"
+            />
+            <div class="info-usuario">
+              <h2 class="nome-usuario">Gabriel Rios</h2>
+            </div>
+          </header>
+          <p class="texto-postagem">texto da postagem</p>
+          <img
+            src="https://scproduction.s3.sa-east-1.amazonaws.com/wysiwyg_uploads/cms/images/2018/10/01/19/07-h9ytse3i.JPG"
+            alt=""
+            class="imagem-postagem"/>
+        </article>
+         <!-- botao de like -->
+       <input type="checkbox" id="checkbox" />
+       <label for="checkbox">
+         <svg
+           id="heart-svg"
+           viewBox="467 392 58 57"
+           xmlns="http://www.w3.org/2000/svg"
+         >
+           <g
+             id="Group"
+             fill="none"
+             fill-rule="evenodd"
+             transform="translate(467 392)"
+           >
+             <path
+               d="M29.144 20.773c-.063-.13-4.227-8.67-11.44-2.59C7.63 28.795 28.94 43.256 29.143 43.394c.204-.138 21.513-14.6 11.44-25.213-7.214-6.08-11.377 2.46-11.44 2.59z"
+               id="heart"
+               fill="none"
+               stroke="#505050"
+               stroke-width="3"
+             />
+             <circle
+               id="main-circ"
+               fill="#FF0000"
+               opacity="0"
+               cx="29.5"
+               cy="29.5"
+               r="1.5"
+             />
+
+             <g id="grp7" opacity="0" transform="translate(7 6)">
+               <circle id="oval1" fill="#9CD8C3" cx="2" cy="6" r="2" />
+               <circle id="oval2" fill="#8CE8C3" cx="5" cy="2" r="2" />
+             </g>
+
+             <g id="grp6" opacity="0" transform="translate(0 28)">
+               <circle id="oval1" fill="#CC8EF5" cx="2" cy="7" r="2" />
+               <circle id="oval2" fill="#91D2FA" cx="3" cy="2" r="2" />
+             </g>
+
+             <g id="grp3" opacity="0" transform="translate(52 28)">
+               <circle id="oval2" fill="#9CD8C3" cx="2" cy="7" r="2" />
+               <circle id="oval1" fill="#8CE8C3" cx="4" cy="2" r="2" />
+             </g>
+
+             <g id="grp2" opacity="0" transform="translate(44 6)">
+               <circle id="oval2" fill="#CC8EF5" cx="5" cy="6" r="2" />
+               <circle id="oval1" fill="#CC8EF5" cx="2" cy="2" r="2" />
+             </g>
+
+             <g id="grp5" opacity="0" transform="translate(14 50)">
+               <circle id="oval1" fill="#91D2FA" cx="6" cy="5" r="2" />
+               <circle id="oval2" fill="#91D2FA" cx="2" cy="2" r="2" />
+             </g>
+
+             <g id="grp4" opacity="0" transform="translate(35 50)">
+               <circle id="oval1" fill="#F48EA7" cx="6" cy="5" r="2" />
+               <circle id="oval2" fill="#F48EA7" cx="2" cy="2" r="2" />
+             </g>
+
+             <g id="grp1" opacity="0" transform="translate(24)">
+               <circle id="oval1" fill="#9FC7FA" cx="2.5" cy="3" r="2" />
+               <circle id="oval2" fill="#9FC7FA" cx="7.5" cy="2" r="2" />
+             </g>
+           </g>
+         </svg>
+       </label>
+       <!-- ---- -->
+      </section>
+      
+      <hr/>
+    </main>
+  </body>
 </html>
