Alterações feitas para o perfil

--- a/Athlete_Connect/04 - perfil/index.html
+++ b/Athlete_Connect/04 - perfil/index.html
@@ -130,6 +130,42 @@
           </svg>
         </label>
         <!-- ---- -->
+  </article>
+  
+</section>
+ <!-- comment img -->
+ <img
+ src="Imagens/commentButton.svg"
+ alt="iconamoon-comment"
+ border="0"
+/>
+</div>
+<div class="estatisticasPostagem">
+<div class="pessoas">
+ <img
+   src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+   alt=""
+ />
+ <img
+   src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+   alt=""
+ />
+ <img
+   src="http://www.logicengenharia.com.br/mcamara/images/mcamara.jpg"
+   alt=""
+ />
+</div>
+<p>13K <br />coments</p>
+<p>1K <br />curtidas</p>
+</div>
+</div>
+<div class="configPostagem">
+<img
+src="https://i.ibb.co/c3hZ8b4/grommet-icons-more.png"
+alt="grommet-icons-more"
+border="0"
+/>
+</div>
          <hr>
         <!-- Postagem 2 -->
         <article class="postagem">
