--- a/Athlete_Connect/06 - CONFIG/index.html
+++ b/Athlete_Connect/06 - CONFIG/index.html
@@ -10,54 +10,54 @@
 
 <body>
   <div class="container">
+    
     <div class="header">
       <img src="https://i.pinimg.com/564x/e3/0a/7e/e30a7e1de560c68ac082db60b48f335c.jpg" alt="Profile Picture">
       <h2 class="seu-perfil">Seu perfil</h2>
       <a href="#">Editar perfil</a>
     </div>
-
-    <ul class="lista-configuracoes">
-      <li class="campos-itens">
+    <img src="assets/images/qr-code.svg" alt="" class="qr-code">
    
 
+    <ul class="lista-configuracoes">
+
+
+      <li class="campos-itens">
         <!-- ícone da opção "conta" -->
-        <div> 
+        <div>
           <img src="assets/images/user.svg" alt="iconamoon-comment" class="icone-imagem-1" />
         </div>
-
         <a href="#" class="green">Conta</a>
-
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- ícone for Chats -->
-          <use xlink:href="#icon-chat"></use>
-        </svg>
+        <img src="assets/images/chat.svg" alt="" class="icone-imagem-1">
         <a href="#"><strong>Chats</strong></a>
         <div></div>
-
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- ícone for Doações Enviadas -->
-          <use xlink:href="#icon-sent-donation"></use>
-        </svg>
+        <img src="assets/images/money.svg" alt="" class="icone-imagem-1">
         <a href="#" class="green"><strong>Doações Enviadas</strong></a>
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- icon for Doações Recebidas -->
-          <use xlink:href="#icon-received-donation"></use>
-        </svg>
+        <img src="assets/images/save-money.svg" alt="" class="icone-imagem-2">
         <a href="#"><strong>Doações Recebidas</strong></a>
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- icon for Central de Ajuda -->
-          <use xlink:href="#icon-help"></use>
-        </svg>
+        <img src="assets/images/faq.svg" alt="" class="icone-imagem-1">
         <a href="#"><strong>Central de Ajuda</strong></a>
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- icon for Fechar Aplicativo -->
-          <use xlink:href="#icon-close"></use>
-        </svg>
+        <img src="assets/images/close.svg" alt="" class="icone-imagem-1">
         <a href="#" class="close-app">Fechar Aplicativo</a>
       </li>
     </ul>
