refactor: profile page

--- a/Athlete_Connect/06 - CONFIG/index.html
+++ b/Athlete_Connect/06 - CONFIG/index.html
@@ -5,59 +5,60 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Configurações de Perfil</title>
+  <link rel="icon" href="https://media.discordapp.net/attachments/1280940186003574800/1280969091611496550/707abe9e-50a7-45e3-b07a-ccc26948cb22_0.png?ex=67291cee&is=6727cb6e&hm=34fd353a5734acd8029437f681ca9020b9cac23dfcc623a74a1acb7b74a6e41f&=&format=webp&quality=lossless&width=676&height=676" type="image/x-icon">
   <link rel="stylesheet" href="config.css">
 </head>
 
 <body>
   <div class="container">
+    
     <div class="header">
-      <img src="https://i.pinimg.com/564x/e3/0a/7e/e30a7e1de560c68ac082db60b48f335c.jpg" alt="Profile Picture">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqVg_URh9Mvrm3NYaTlCUyiM7r382ohELc1g&s" alt="Profile Picture">
       <h2 class="seu-perfil">Seu perfil</h2>
       <a href="#">Editar perfil</a>
     </div>
-
-    <ul class="lista-configuracoes">
-      <li class="campos-itens">
+    <img src="assets/images/qr-code.svg" alt="" class="qr-code">
    
 
+    <ul class="lista-configuracoes">
+
+
+      <li class="campos-itens">
         <!-- ícone da opção "conta" -->
-        <div> 
+        <div>
           <img src="assets/images/user.svg" alt="iconamoon-comment" class="icone-imagem-1" />
         </div>
-
         <a href="#" class="green">Conta</a>
-
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- ícone for Chats -->
-          <use xlink:href="#icon-chat"></use>
-        </svg>
+        <img src="assets/images/chat.svg" alt="" class="icone-imagem-1">
         <a href="#"><strong>Chats</strong></a>
         <div></div>
-
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- ícone for Doações Enviadas -->
-          <use xlink:href="#icon-sent-donation"></use>
-        </svg>
+        <img src="assets/images/money.svg" alt="" class="icone-imagem-1">
         <a href="#" class="green"><strong>Doações Enviadas</strong></a>
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- icon for Doações Recebidas -->
-          <use xlink:href="#icon-received-donation"></use>
-        </svg>
+        <img src="assets/images/save-money.svg" alt="" class="icone-imagem-2">
         <a href="#"><strong>Doações Recebidas</strong></a>
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- icon for Central de Ajuda -->
-          <use xlink:href="#icon-help"></use>
-        </svg>
+        <img src="assets/images/faq.svg" alt="" class="icone-imagem-1">
         <a href="#"><strong>Central de Ajuda</strong></a>
       </li>
+
+
       <li class="campos-itens">
-        <svg> <!-- icon for Fechar Aplicativo -->
-          <use xlink:href="#icon-close"></use>
-        </svg>
+        <img src="assets/images/close.svg" alt="" class="icone-imagem-1">
         <a href="#" class="close-app">Fechar Aplicativo</a>
       </li>
     </ul>
