--- a/Athlete_Connect/06 - CONFIG/index.html
+++ b/Athlete_Connect/06 - CONFIG/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Configurações de Perfil</title>
     <link
-      rel="icon"
-      href="https://media.discordapp.net/attachments/1280940186003574800/1280969091611496550/707abe9e-50a7-45e3-b07a-ccc26948cb22_0.png?ex=67291cee&is=6727cb6e&hm=34fd353a5734acd8029437f681ca9020b9cac23dfcc623a74a1acb7b74a6e41f&=&format=webp&quality=lossless&width=676&height=676"
-      type="image/x-icon"
-    />
+    rel="icon"
+    href="../images/Athlete_Connect Icon.png"
+    type="image/x-icon"
+  />
     <link rel="stylesheet" href="config.css" />
   </head>
 
