--- a/Athlete_Connect/00 - cadastro_login/01 - login/loginAtleta.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/loginAtleta.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login_Atleta</title>
     <link rel="stylesheet" href="./assets/style.css">
+    <link
+    rel="icon"
+    href="../images/Athlete_Connect Icon.png"
+    type="image/x-icon"
+  />
     <style>
       .botaoPrincipal {
         margin-top: 0;
