--- a/Athlete_Connect/04 - perfil/compartilharPerfil.html
+++ b/Athlete_Connect/04 - perfil/compartilharPerfil.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compartilhar Perfil</title>
+    <link
+    rel="icon"
+    href="../images/Athlete_Connect Icon.png"
+    type="image/x-icon"
+  />
 </head>
 <body>
 
