--- a/Athlete_Connect/04 - perfil/index.html
+++ b/Athlete_Connect/04 - perfil/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perfil(Atleta)</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+    rel="icon"
+    href="../images/Athlete_Connect Icon.png"
+    type="image/x-icon"
+  />
   </head>
 
   <body>
