--- a/Athlete_Connect/05 - doacoes/doacoesEnvio.html
+++ b/Athlete_Connect/05 - doacoes/doacoesEnvio.html
@@ -6,6 +6,11 @@
   <title>Enviar Doação</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
+  <link
+  rel="icon"
+  href="../images/Athlete_Connect Icon.png"
+  type="image/x-icon"
+/>
 </head>
 <body>
   
