--- a/Athlete_Connect/07 - FAQ/index.html
+++ b/Athlete_Connect/07 - FAQ/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link
+  rel="icon"
+  href="../images/Athlete_Connect Icon.png"
+  type="image/x-icon"
+/>
+  <title>FAQ</title>
 </head>
 <body>
   
