--- a/Athlete_Connect/05 - doacoes/doacaoesRec.html
+++ b/Athlete_Connect/05 - doacoes/doacaoesRec.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+  rel="icon"
+  href="../images/Athlete_Connect Icon.png"
+  type="image/x-icon"
+/>
+  <title>Doações</title>
+</head>
 <div style="width: 375px; height: 812px; position: relative; background: #F5F5F5">
   <div style="left: 23px; top: 182px; position: absolute; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 16px; display: inline-flex">
     <div style="width: 327px; padding: 16px; background: white; border-radius: 16px; justify-content: flex-start; align-items: center; display: inline-flex">
