--- a/Athlete_Connect/05 - doacoes/rankingRasc.html
+++ b/Athlete_Connect/05 - doacoes/rankingRasc.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+  rel="icon"
+  href="../images/Athlete_Connect Icon.png"
+  type="image/x-icon"
+/>
+  <title>Ranking</title>
+</head>
+
 <div style="width: 375px; height: 812px; position: relative; background: linear-gradient(168deg, rgba(7, 218, 101, 0.50) 59%, #047436 100%)">
   <div style="left: 101px; top: 39px; position: absolute; color: white; font-size: 20px; font-family: Inter; font-weight: 600; word-wrap: break-word">Ranking de doações</div>
   <div style="width: 122px; height: 147px; left: 137px; top: 255px; position: absolute; background: #060606; border-radius: 5px"></div>
