Modificação: Correções na tela de configurações

--- a/Athlete_Connect/06 - CONFIG/index.html
+++ b/Athlete_Connect/06 - CONFIG/index.html
@@ -4,31 +4,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Configurações de Perfil</title>
-  <link rel="icon" href="https://media.discordapp.net/attachments/1280940186003574800/1280969091611496550/707abe9e-50a7-45e3-b07a-ccc26948cb22_0.png?ex=67291cee&is=6727cb6e&hm=34fd353a5734acd8029437f681ca9020b9cac23dfcc623a74a1acb7b74a6e41f&=&format=webp&quality=lossless&width=676&height=676" type="image/x-icon">
+  <link rel="icon"
+    href="https://media.discordapp.net/attachments/1280940186003574800/1280969091611496550/707abe9e-50a7-45e3-b07a-ccc26948cb22_0.png?ex=67291cee&is=6727cb6e&hm=34fd353a5734acd8029437f681ca9020b9cac23dfcc623a74a1acb7b74a6e41f&=&format=webp&quality=lossless&width=676&height=676"
+    type="image/x-icon">
   <link rel="stylesheet" href="config.css">
 </head>
 
+
 <body>
   <div class="container">
-    
     <div class="header">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqVg_URh9Mvrm3NYaTlCUyiM7r382ohELc1g&s" alt="Profile Picture">
-      <h2 class="seu-perfil">Seu perfil</h2>
-      <a href="#">Editar perfil</a>
+
+      <div class="seta-voltar">
+        <img src="assets/images/Vector (1).svg" alt="">
+      </div>
+      
+      <h1 class="texto-configurar">Configurações</h1>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqVg_URh9Mvrm3NYaTlCUyiM7r382ohELc1g&s"
+        alt="icon-perfil" class="icone-perfil">
     </div>
-    <img src="assets/images/qr-code.svg" alt="" class="qr-code">
-   
+
+    <div class="seu-perfil">
+      <h2>Seu perfil</h2>
+      <img src="assets/images/Vector.svg" alt="">
+    </div>
+
+    <div class="qr-code">
+      <img src="assets/images/qr-code.svg" alt="qr-code">
+    </div>
+
+    <div class="qr-code">
+
+    </div>
+
 
     <ul class="lista-configuracoes">
-
-
       <li class="campos-itens">
-        <!-- ícone da opção "conta" -->
         <div>
           <img src="assets/images/user.svg" alt="iconamoon-comment" class="icone-imagem-1" />
         </div>
-        <a href="#" class="green">Conta</a>
+        <a href="#" class="green"><strong>Conta</strong></a>
       </li>
 
 
