Alterações: Subtexto das opções

--- a/Athlete_Connect/06 - CONFIG/index.html
+++ b/Athlete_Connect/06 - CONFIG/index.html
@@ -20,7 +20,7 @@
       <div class="seta-voltar">
         <img src="assets/images/Vector (1).svg" alt="">
       </div>
-      
+
       <h1 class="texto-configurar">Configurações</h1>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqVg_URh9Mvrm3NYaTlCUyiM7r382ohELc1g&s"
         alt="icon-perfil" class="icone-perfil">
@@ -29,15 +29,11 @@
     <div class="seu-perfil">
       <h2>Seu perfil</h2>
       <img src="assets/images/Vector.svg" alt="">
+      <div class="qr-code">
+        <img src="assets/images/qr-code.svg" alt="qr-code">
+      </div>
     </div>
 
-    <div class="qr-code">
-      <img src="assets/images/qr-code.svg" alt="qr-code">
-    </div>
-
-    <div class="qr-code">
-
-    </div>
 
 
     <ul class="lista-configuracoes">
@@ -45,32 +41,45 @@
         <div>
           <img src="assets/images/user.svg" alt="iconamoon-comment" class="icone-imagem-1" />
         </div>
-        <a href="#" class="green"><strong>Conta</strong></a>
+        <div class="subtexto">
+          <a href="#" class="green"><strong>Conta</strong></a>
+          <p>Privacidade, seguranca, trocar E-mail e numero</p>
+        </div>
       </li>
 
 
       <li class="campos-itens">
         <img src="assets/images/chat.svg" alt="" class="icone-imagem-1">
-        <a href="#"><strong>Chats</strong></a>
-        <div></div>
+        <div class="subtexto">
+          <a href="#"><strong>Chats</strong></a>
+          <p>Histórico de chats</p>
+        </div>
       </li>
 
 
       <li class="campos-itens">
         <img src="assets/images/money.svg" alt="" class="icone-imagem-1">
-        <a href="#" class="green"><strong>Doações Enviadas</strong></a>
+
+        <div class="subtexto">
+          <a href="#" class="green"><strong>Doações Enviadas</strong></a>
+          <p>Todas as doações enviadas</p>
+        </div>
       </li>
 
 
       <li class="campos-itens">
         <img src="assets/images/save-money.svg" alt="" class="icone-imagem-2">
-        <a href="#"><strong>Doações Recebidas</strong></a>
+        <div class="subtexto">
+          <a href="#"><strong>Doações Recebidas</strong></a>
+        </div>
       </li>
 
 
       <li class="campos-itens">
         <img src="assets/images/faq.svg" alt="" class="icone-imagem-1">
-        <a href="#"><strong>Central de Ajuda</strong></a>
+        <div class="">
+          <a href="#"><strong>Central de Ajuda</strong></a>
+        </div>
       </li>
 
 
@@ -79,6 +88,22 @@
         <a href="#" class="close-app">Fechar Aplicativo</a>
       </li>
     </ul>
+  </div>
+
+  <div class="bottom-nav">
+    <!-- criação de postagem -->
+    <a href="#" class="nav-item">
+      <img src="https://i.ibb.co/4pT63Cm/home-Verde.png" alt="homeVerde" border="0" />
+    </a>
+    <a href="#" class="nav-item">
+      <img src="https://i.ibb.co/3k6pWKF/search.png" alt="search" border="0" />
+    </a>
+    <a href="#" class="nav-item">
+      <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
+    </a>
+    <a href="#" class="nav-item">
+      <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
+    </a>
   </div>
 </body>
 
