Alterações: Subtextos das opções das configurações

--- a/Athlete_Connect/06 - CONFIG/index.html
+++ b/Athlete_Connect/06 - CONFIG/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Configurações de Perfil</title>
-    <link
-    rel="icon"
-    href="../images/Athlete_Connect Icon.png"
-    type="image/x-icon"
-  />
-    <link rel="stylesheet" href="config.css" />
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Configurações de Perfil</title>
+  <link rel="icon" href="../images/Athlete_Connect Icon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="config.css" />
+</head>
 
 <head>
   <meta charset="UTF-8">
@@ -54,7 +51,7 @@
         </div>
         <div class="subtexto">
           <a href="#" class="green"><strong>Conta</strong></a>
-          <p>Privacidade, seguranca, trocar E-mail e numero</p>
+          <p>Privacidade, seguranca, Email, Validaçã.. </p>
         </div>
       </li>
 
@@ -82,21 +79,27 @@
         <img src="assets/images/save-money.svg" alt="" class="icone-imagem-2">
         <div class="subtexto">
           <a href="#"><strong>Doações Recebidas</strong></a>
+          <p>Todas as doações recebidas</p>
         </div>
       </li>
 
 
       <li class="campos-itens">
         <img src="assets/images/faq.svg" alt="" class="icone-imagem-1">
-        <div class="">
+        <div class="subtexto">
           <a href="#"><strong>Central de Ajuda</strong></a>
+          <p>Central de atendimento e politicas de pri...</p>
         </div>
       </li>
 
 
       <li class="campos-itens">
+
         <img src="assets/images/close.svg" alt="" class="icone-imagem-1">
-        <a href="#" class="close-app">Fechar Aplicativo</a>
+        <div class="subtexto">
+          <a href="#" class="close-app">Fechar Aplicativo</a>
+          <p>Finalizar execução e retornar da tela inicial. </p>
+        </div>
       </li>
     </ul>
   </div>
