--- a/Athlete_Connect/04 - perfil/index.html
+++ b/Athlete_Connect/04 - perfil/index.html
@@ -292,6 +292,30 @@
           </div>
         </article>
       </section>
+      <!-- navbar inferior -->
+      <div class="bottom-nav">
+       
+        <a href="#" class="nav-item">
+          <img
+            src="https://i.ibb.co/4pT63Cm/home-Verde.png"
+            alt="homeVerde"
+            border="0"
+          />
+        </a>
+        <a href="#" class="nav-item">
+          <img
+            src="https://i.ibb.co/3k6pWKF/search.png"
+            alt="search"
+            border="0"
+          />
+        </a>
+        <a href="#" class="nav-item">
+          <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
+        </a>
+        <a href="#" class="nav-item">
+          <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
+        </a>
+      </div>
     </main>
   </body>
 </html>
