--- a/Athlete_Connect/01 - telas principais/01 - para voce/index.html
+++ b/Athlete_Connect/01 - telas principais/01 - para voce/index.html
@@ -559,7 +559,7 @@
             border="0"
           />
         </a>
-        <a href="#" class="nav-item">
+        <a href="../02 - search/index.html" class="nav-item">
           <img
             src="https://i.ibb.co/3k6pWKF/search.png"
             alt="search"
@@ -569,7 +569,7 @@
         <a href="#" class="nav-item">
           <img src="https://i.ibb.co/Ph6zStT/msg.png" alt="msg" border="0" />
         </a>
-        <a href="#" class="nav-item">
+        <a href="../../04 - perfil/index.html" class="nav-item">
           <img src="https://i.ibb.co/4SNH6tn/user.png" alt="user" border="0" />
         </a>
       </div>
