--- a/Athlete_Connect/01 - telas principais/02 - search/index.html
+++ b/Athlete_Connect/01 - telas principais/02 - search/index.html
@@ -58,7 +58,7 @@
       <!-- navbar inferior -->
       
       <div class="bottom-nav"> 
-        <a href="../01 - para voce/index.html" class="nav-item">
+        <a href="../01 - para voce/paraVoce.html" class="nav-item">
           <img src="https://i.ibb.co/dm9dM9M/casa.png" alt="casa" border="0">
         </a>
         <a href="#" class="nav-item">
