--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroOrg2.html
@@ -23,17 +23,19 @@
       </section>
 
       <section class="forms">
-        <input type="text" placeholder="Nome da sua Organização" />
+        <input type="text" placeholder="Nome da sua Organização" required/>
         <input type="text" placeholder="CEP" />
-        <input  type="text" placeholder="Ramo" />
+        <input  type="text" placeholder="Ramo" required/>
 
       </section>
   
       <div class="submitbutton">
-        <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
+        <a href="./login.html">
+          <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
+        </a>
       </div>
     </main>
 
-    <script src="./assets/returnToLogin.js"></script>
+    <script></script>
   </body>
 </html>
