--- a/Athlete_Connect/00 - cadastro_login/01 - login/login.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/login.html
@@ -24,8 +24,8 @@
       </section>
 
       <section class="forms">
-        <input type="text" placeholder="CPF/CNPJ" />
-        <input type="password" placeholder="Senha" />
+        <input type="text" placeholder="CPF/CNPJ" required/>
+        <input type="password" placeholder="Senha" required/>
       </section>
    
 
@@ -45,7 +45,10 @@
       </div>
 
       <div class="submitbutton">
-        <button class="botaoPrincipal" type="button">AVANÇAR</button>
+        <a href="../../01 - telas principais/01 - para voce/paraVoce.html">
+          <button class="botaoPrincipal" type="button">AVANÇAR</button>
+
+        </a>
       </div>
       
 
