--- a/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
+++ b/Athlete_Connect/00 - cadastro_login/00 - welcome/index.html
@@ -36,7 +36,7 @@
             alt="esportista"
             border="0"
           />
-          <button type="button" onclick="window.location.href='../01 - login/loginAtleta.html'">AVANÇAR</button>
+          <button type="button" onclick="window.location.href='../01 - login/cadastroAtleta.html'">AVANÇAR</button>
           <p>Seja apoiado como atleta</p>
         </div>
         <div class="opcao">
@@ -45,14 +45,14 @@
             alt="doador"
             border="0"
           />
-          <button type="button" onclick="window.location.href='../01 - login/loginCarreira.html'">AVANÇAR</button>
+          <button type="button" onclick="window.location.href='../01 - login/cadastroCarreira.html'">AVANÇAR</button>
           <p>Doador / Organizações</p>
         </div>
       </section>
 
       <section class="loginpage">
         <p>Já possui uma conta?</p>
-        <a href="../01 - login/index.html">Faça Login!</a>
+        <a href="../01 - login/login.html">Faça Login!</a>
       </section>
 
       <div class="footerImg">
