--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroAtleta.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroAtleta.html
@@ -33,25 +33,27 @@
       </section>
 
       <section class="forms">
-        <input type="text" placeholder="CPF/CNPJ" />
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Senha" />
-        <input  type="text" placeholder="Telefone" />
-        <input  type="text" placeholder="Informe seu esporte" />
+        <input type="text" placeholder="CPF/CNPJ" required/>
+        <input type="email" placeholder="Email" required/>
+        <input type="password" placeholder="Senha" required/>
+        <input  type="text" placeholder="Telefone" required/>
+        <input  type="text" placeholder="Informe seu esporte" required/>
 
       </section>
    
 
       <section class="loginpage">
         <p>Já possui Conta?
-        <a href="./index.html">Faça Login!</a></p>
+        <a href="./login.html">Faça Login!</a></p>
       </section>
 
       <div class="submitbutton">
-        <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
+        <a href="./login.html">
+          <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
+        </a>
       </div>
     </main>
 
-    <script src="./assets/returnToLogin.js"></script>
+    <script></script>
   </body>
 </html>
