--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor.html
@@ -33,17 +33,19 @@
       </section>
 
       <section class="forms">
-        <input type="text" placeholder="CPF/CNPJ" />
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Senha" />
+        <input type="text" placeholder="CPF/CNPJ" required/>
+        <input type="email" placeholder="Email" required/>
+        <input type="password" placeholder="Senha" required/>
       </section>
 
       <section class="loginpage">
-        <p>Já possui Conta? <a href="./index.html">Faça Login!</a></p>
+        <p>Já possui Conta? <a href="./login.html">Faça Login!</a></p>
       </section>
 
       <div class="submitbutton">
-        <button class="botaoPrincipal" type="button">AVANÇAR</button>
+        <a href="./cadastroInvestidor2.html">
+          <button class="botaoPrincipal" type="button">AVANÇAR</button>
+        </a>
       </div>
     </main>
 
