--- a/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor2.html
+++ b/Athlete_Connect/00 - cadastro_login/01 - login/cadastroInvestidor2.html
@@ -32,14 +32,16 @@
 
       <section class="loginpage">
         <p>Já possui Conta?
-        <a href="./index.html">Faça Login!</a></p>
+        <a href="./login.html">Faça Login!</a></p>
       </section>
 
       <div class="submitbutton">
-        <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
+        <a href="./login.html">
+          <button class="botaoPrincipal" type="button">CRIAR CONTA</button>
+        </a>
       </div>
     </main>
 
-    <script src="./assets/returnToLogin.js"></script>
+    <script></script>
   </body>
 </html>
